Bug 148837 - Select a cell range and then select another range, the selected range is wrong
Summary: Select a cell range and then select another range, the selected range is wrong
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.2.6.2 release
Hardware: All All
: medium normal
Assignee: Kevin Suo
URL:
Whiteboard: target:7.4.0 target:7.3.4
Keywords:
Depends on:
Blocks:
 
Reported: 2022-04-28 13:01 UTC by Kevin Suo
Modified: 2022-05-06 23:30 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
gif screencast (286.33 KB, image/gif)
2022-04-28 13:01 UTC, Kevin Suo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kevin Suo 2022-04-28 13:01:45 UTC
Created attachment 179823 [details]
gif screencast

Steps to Reproduce:
1. New Calc, Ctrl+A to select all.
2. Hold Ctrl key, then select a range.
3. Hold Ctrl key, then select another range and then do reverse selection.

Current Result:
Selected range is wrong.

The attached gif screencast says everything.

Reproduced in
Version: 7.2.6.2 / LibreOffice Community
Build ID: b0ec3a565991f7569a5a7f5d24fed7f52653d754
CPU threads: 8; OS: Linux 5.17; UI render: default; VCL: gtk3
Locale: zh-CN (zh_CN.UTF-8); UI: zh-CN
Calc: threaded
Fedora 35

also in 7.3 branch.

This bug was initially reported in the Chinese community forum:
https://bbs.libreofficechina.org/thread-3160-1-1.html
Comment 1 Kevin Suo 2022-04-28 13:58:04 UTC
https://gerrit.libreoffice.org/c/core/+/133538
Comment 2 Commit Notification 2022-05-06 12:04:12 UTC
hasban12138 committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2490715c112699487915865f4267a880fe7bc4b3

tdf#148837: fix cell range negative selection

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2022-05-06 23:30:54 UTC
hasban12138 committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/2e33212b761cbed1b13a00750ecb7fece0d6a047

tdf#148837: fix cell range negative selection

It will be available in 7.3.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.