tdf#148837: fix cell range negative selection

In Calc when you select all and then do negative selection, there has a
bug. The reason is in ScMultiSel::SetMarkArea that case will make nBeg
larger than nEndRow and in MarkAllCols start will be larger than end.
So I added a condition in the if clause to make sure that nBeg is not
larger than nEndRow.

Change-Id: I7f39a588bf928b2885207810534d78481589c2f4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/133538
Tested-by: Jenkins
Reviewed-by: Eike Rathke <erack@redhat.com>
(cherry picked from commit 2490715c112699487915865f4267a880fe7bc4b3)